--- a/package.json
+++ b/package.json
@@ -15,31 +15,31 @@
     "test:unit": "vitest"
   },
   "devDependencies": {
-    "@playwright/test": "^1.28.1",
-    "@sveltejs/adapter-auto": "^2.0.0",
-    "@sveltejs/kit": "^1.20.4",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.28.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-svelte": "^2.30.0",
-    "prettier": "^2.8.0",
-    "prettier-plugin-svelte": "^2.10.1",
-    "svelte": "^4.0.5",
-    "svelte-check": "^3.4.3",
-    "tslib": "^2.4.1",
-    "typescript": "^5.0.0",
-    "vite": "^4.4.2",
-    "vitest": "^0.32.2",
-    "postcss": "8.4.29",
-    "autoprefixer": "10.4.15",
-    "tailwindcss": "3.3.3",
+    "@playwright/test": "^1.41.1",
     "@skeletonlabs/skeleton": "2.1.0",
     "@skeletonlabs/tw-plugin": "0.2.0",
-    "vite-plugin-tailwind-purgecss": "0.1.3",
-    "@tailwindcss/typography": "0.5.10",
+    "@sveltejs/adapter-auto": "^2.1.1",
+    "@sveltejs/kit": "^1.30.3",
     "@tailwindcss/forms": "0.5.6",
-    "@types/node": "20.6.2"
+    "@tailwindcss/typography": "0.5.10",
+    "@types/node": "20.6.2",
+    "@typescript-eslint/eslint-plugin": "^6.19.1",
+    "@typescript-eslint/parser": "^6.19.1",
+    "autoprefixer": "10.4.15",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^8.10.0",
+    "eslint-plugin-svelte": "^2.35.1",
+    "postcss": "8.4.29",
+    "prettier": "^2.8.8",
+    "prettier-plugin-svelte": "^2.10.1",
+    "svelte": "^4.2.9",
+    "svelte-check": "^3.6.3",
+    "tailwindcss": "3.3.3",
+    "tslib": "^2.6.2",
+    "typescript": "^5.3.3",
+    "vite": "^4.5.2",
+    "vite-plugin-tailwind-purgecss": "0.1.3",
+    "vitest": "^0.32.4"
   },
   "type": "module",
   "dependencies": {
