--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "@playwright/test": "^1.41.1",
     "@skeletonlabs/skeleton": "2.1.0",
     "@skeletonlabs/tw-plugin": "0.2.0",
-    "@sveltejs/adapter-auto": "^2.1.1",
-    "@sveltejs/kit": "^1.30.3",
+    "@sveltejs/adapter-auto": "^3.1.1",
+    "@sveltejs/kit": "^2.4.3",
+    "@sveltejs/vite-plugin-svelte": "^3.0.1",
     "@tailwindcss/forms": "0.5.6",
     "@tailwindcss/typography": "0.5.10",
     "@types/node": "20.6.2",
@@ -37,9 +38,9 @@
     "tailwindcss": "3.3.3",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3",
-    "vite": "^4.5.2",
+    "vite": "^5.0.12",
     "vite-plugin-tailwind-purgecss": "0.1.3",
-    "vitest": "^0.32.4"
+    "vitest": "^1.2.1"
   },
   "type": "module",
   "dependencies": {
